--- a/src/components/header/HeaderLogo/HeaderLogo.module.scss
+++ b/src/components/header/HeaderLogo/HeaderLogo.module.scss
@@ -1,5 +1,8 @@
 .header__logo {
+    width: 100%;
+    text-align: center;
+    margin: 2em auto;
     img {
-        width: 200px;
+        width: 150px;
     }
 }
