--- a/src/components/header/HeaderMenu/HeaderMenu.module.scss
+++ b/src/components/header/HeaderMenu/HeaderMenu.module.scss
@@ -1,6 +1,7 @@
 .header__menu {
     ul {
         display: flex;
+        justify-content: center;
         padding: 0;
         li {
             list-style: none;
