--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,9 @@
+@import './helpers/reset';
+@import './helpers/variables';
+@import './themes/text-align';
+@import './base/base';
+@import './themes/button';
+
 html,
 body {
   padding: 0;
@@ -21,4 +27,15 @@ a {
   padding-left: var(--bs-gutter-x,.75rem);
   margin-right: auto;
   margin-left: auto;
+  @media (min-width: 1400px) {
+    max-width: 1320px;
+  }
+  @media (min-width: 1200px) {
+    max-width: 1140px;
+  }
+}
+
+.header__top {
+  display: flex;
+  position: relative;
 }
