--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 @import './helpers/reset';
 @import './helpers/variables';
 @import './themes/text-align';
+@import './themes/alert';
 @import './base/base';
 @import './themes/button';
 
