--- a/src/components/header/HeaderToolbar/HeaderToolbar.module.scss
+++ b/src/components/header/HeaderToolbar/HeaderToolbar.module.scss
@@ -5,12 +5,47 @@
     right: 1em;
     top: 50%;
     transform: translateY(-50%);
-    ul {
+    &> ul {
         margin: 0;
         display: flex;
         li {
             list-style: none;
             padding: 1em;
+            &.dropdown {
+                position: relative;
+                &:hover {
+                    background: #fff;
+                    .dropdown_menu {
+                        display: block;
+                        position: absolute;
+                        inset: 0px auto auto 0px;
+                        margin: 0px;
+                        transform: translate3d(0px, 40px, 0px);
+                    }
+                }
+                .dropdown_menu {
+                    position: absolute;
+                    z-index: 1000;
+                    display: none;
+                    min-width: 10rem;
+                    padding: 0.5rem;
+                    margin: 0;
+                    font-size: 1rem;
+                    color: #212529;
+                    text-align: left;
+                    list-style: none;
+                    background-color: #fff;
+                    background-clip: padding-box;
+                    a {
+                        display: block;
+                        padding: 0.5em;
+                        border-bottom: 1px solid rgba(0,0,0,.1);
+                        &:last-child {
+                            border-bottom: transparent;
+                        }
+                    }
+                }
+            }
         }
     }
 }
