--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -17,3 +17,19 @@ a {
 .header__main, footer {
     background: #f7f8fa;
 }
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    .col {
+        position: relative;
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        flex-basis: 0;
+        flex-grow: 1;
+        max-width: 100%;
+    }
+}
