--- a/src/styles/themes/_button.scss
+++ b/src/styles/themes/_button.scss
@@ -12,6 +12,7 @@
     line-height: 42px;
     padding: 0 24px;
     font-size: 16px;
+    cursor: pointer;
     &-black {
         border-color: #222222;
         background-color: #222222;
