--- a/src/components/product/ProductCard/ProductCard.module.scss
+++ b/src/components/product/ProductCard/ProductCard.module.scss
@@ -1,13 +1,20 @@
 .product__card {
     padding: 0 1em;
+    margin-bottom: 2em;
     .product__img {
         max-width: 100%;
     }
     .product__title {
-        font-size: 1em;
-        text-align: center;
+        font-size: 12px;
+        font-weight: normal;
+        color: #767676;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
     .product__price {
-        text-align: center;
+        font-weight: bold;
+        font-size: 16px;
+        margin-top: 0;
     }
 }
